--- a/Project iNeuron-12/index.html
+++ b/Project iNeuron-12/index.html
@@ -4,170 +4,157 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Business Landing Page</title>
-    <script src="https://kit.fontawesome.com/9f285d89df.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="nav">
-            <img class="logo-top"  src="./images/white-logo.png" alt="">
-            <ul class="nav-list">
-                <li class="nav-list-item">Home</li>
-                <li class="nav-list-item">About Us</li>
-                <li class="nav-list-item">Pages</li>
-                <li class="nav-list-item">Agent</li>
-                <li class="nav-list-item">Blog</li>
-                <li class="nav-list-item">Subscribe</li>
+    <header>
+        <nav>
+            <img src="./images/white-logo.png" alt="Logo" class="logo-top">
+            <ul>
+                <li class="nav-list">Home</li>
+                <li class="nav-list">About US</li>
+                <li class="nav-list">Pages</li>
+                <li class="nav-list">Agent</li>
+                <li class="nav-list">Blog</li>
+                <li class="nav-list">Subscriber</li>
+                <li><button class="nav-btn">Let's Talk</button></li>
             </ul>
-            <button class="btn-white">Let's Talk</button>
-        </div>
-        <div class="main">
-            <div class="pic1-box">
-                <img class="pic1" src="./images/pic1.jpg" alt="">
+            <div class="nav-icon">
+                <img src="./images/mq-navtest.svg" alt="nav icon">
             </div>
-            <div class="head">
-                <h1 class="heading">Empowering your business with the best solution</h1>
-                <p class="head-para">We connect your brand & business with your target market in the most desirable, refined and elevated way possible through the digital medium</p>
-                <div class="head-reach">
-                    <i class="head-icon fa-solid fa-envelope"></i>
-                    <input type="email" class="head-input" placeholder="Enter your email address">
-                    <button class="btn-green lets-talk">Let's Talk</button>
+        </nav>
+        <div class="description">
+            <img src="./images/p12i1.jpg" alt="IMG1" class="first-img">
+            <div class="description-body">
+                <h1>Empowering your business with the best solution</h1>
+                <p>We connect your brand and businesses with your target market in the most desirable, refined and elvated way possible through the degital media.</p>
+                <div class="talk">
+                    <img src="./images/icons8-mail-24.png" alt="mail-icon" class="mail">
+                    <input type="text" name="" id="" placeholder="Enter your Email address">
+                    <button class="talk-btn">Let's Talk</button>
                 </div>
             </div>
         </div>
-        <div class="middle">
-            <h2 class="middle-head">We Connect your businesses <br> with your target</h2>
-            <ul class="middle-list">
-                <li class="middle-list-item">
-                    <h3 class="stats-heading">1,093</h3>
-                    <div class="stats-info">Finished Project</div>
-                </li>
-                <li class="middle-list-item">
-                    <h3 class="stats-heading">3,355</h3>
-                    <div class="stats-info">Enrolled Project</div>
-                </li>
-                <li class="middle-list-item">
-                    <h3 class="stats-heading">40</h3>
-                    <div class="stats-info">Team Worker</div>
-                </li>
-                <li class="middle-list-item">
-                    <h3 class="stats-heading">90%</h3>
-                    <div class="stats-info">Satisfaction Rate</div>
-                </li>
-            </ul>
-            <div class="pic2-box">
-                <img class="pic2" src="./images/pic2.jpg" alt="">
-            </div>            
-            <div class="middle-icon-outer">
-                <i class="middle-icon fa-solid fa-circle-play"></i>
+    </header>
+    <div class="stats">
+        <h1 class="stat-head">We Connect your business with your terget</h1>
+        <div class="numbers">
+            <div class="finished-project">
+                <h2>1,093</h2>
+                <p>Finished Project</p>
             </div>
-            <h2 class="middle-mid">We have made your <br> care easy for you</h2>
-            <div class="middle-box">
-                <div class="middle-box-left">
-                    <h3 class="middle-box-left-head">Effective Website Design <br> and Development</h3>
-                    <p class="middle-box-left-para">By connecting patients all over the world to the best instructors, Healthycare helping individuals reach their goals and pursue their dreams</p>
-                    <button class="btn-green">Let's Talk</button>
-                </div>
-                <div class="pic3-box">
-                    <img class="pic3" src="./images/pic3.jpg" alt="">
-                </div>                
+            <div class="enrolled-project">
+                <h2>3,355</h2>
+                <p>Enrolled Project</p>
             </div>
-            <div class="middle-box opposite">
-                <div class="middle-box-left">
-                    <h3 class="middle-box-left-head">We Give Proven Digital <br> Marketing Strategies for <br> Our Clients</h3>
-                    <p class="middle-box-left-para">Consultant working hard and we collaborate with organizations that are keen to transform the legal industry reach their goals and pursue their dreams.</p>
-                    <button class="btn-green">Let's Talk</button>
-                </div>
-                <div class="pic4-box">
-                    <img class="pic4" src="./images/pic4.jpg" alt="">
-                </div>                
+            <div class="team-worker">
+                <h2>40</h2>
+                <p>Team Worker</p>
             </div>
-            <div class="middle-box">
-                <div class="middle-box-left">
-                    <h3 class="middle-box-left-head">People Will Always Judge <br> the book by it's cover</h3>
-                    <p class="middle-box-left-para">By connecting patients all over the world to the best instructors, Healthycare helping individuals reach their goals and pursue their dreams</p>
-                    <button class="btn-green">Let's Talk</button>
-                </div>
-                <div class="pic5-box">
-                    <img class="pic5" src="./images/pic5.jpg" alt="">
-                </div>                
+            <div class="satisfaction">
+                <h2>90%</h2>
+                <p>Satisfaction Rate</p>
             </div>
-            <div class="middle-lower">
-                <h3 class="middle-lower-heading">Meet our great <br> Creative Teams</h3>
-                <p class="middle-lower-para">Our journey began with a simple idea and a simpler journey to make this world more functional. We collaborate with organizations that are keen to transform</p>
-            </div>
-            <div class="team">
-                <div class="team-box">
-                    <img class="pic678" src="./images/pic6.jpg" alt="">
-                    <h5 class="name">Amera Amanda</h5>
-                    <p class="name-info">Introduction start procrastinate 2 hours get to do work while eating and sleeping now.</p>
-                </div>
-                <div class="team-box">
-                    <img class="pic678" src="./images/pic7.jpg" alt="">
-                    <h5 class="name">Lucas Podolski</h5>
-                    <p class="name-info">Introduction start procrastinate 2 hours get to do work while eating and sleeping now.</p>
-                </div>
-                <div class="team-box">
-                    <img class="pic678" src="./images/pic8.jpg" alt="">
-                    <h5 class="name">Leny Marissa Nasution</h5>
-                    <p class="name-info">Introduction start procrastinate 2 hours get to do work while eating and sleeping now.</p>
-                </div>
-            </div>
-            <button class="btn-green">See More</button>
         </div>
-        
-        <!--Footer-->
-        <div class="footer">
-            <div class="footer-top">
-                <img class="logo-bottom" src="./images/white-logo.png" alt="">
-                <ul class="footer-list">
-                    <li class="footer-list-item"><i class="social-icon fa-brands fa-instagram"></i></li>
-                    <li class="footer-list-item"><i class="social-icon fa-brands fa-facebook-square"></i></li>
-                    <li class="footer-list-item"><i class="social-icon fa-brands fa-twitter"></i></li>
-                    <li class="footer-list-item"><i class="social-icon fa-brands fa-github"></i></li>
-                    <li class="footer-list-item"><i class="social-icon fa-brands fa-hashnode"></i></li>
-                </ul>
+        <img src="./images/p12i2.jpg" alt="Statistics" class="stat-img">
+    </div>
+    <div class="hero">
+        <div class="head-of-hero">
+            <h1 class="hero-head">We have made your care easy for you</h1>
+        </div>
+    <div class="heros">
+            <div class="hero-body">
+                <h1>Effective Website Design and Development</h1>
+                <p>By connecting patients all over the world to the best instructors, Healthycare helping individuals reach there goals and pursue their dreams</p>
+                <button class="talk-btn">Let's Talk</button>
             </div>
-            <hr class="footer-hr">
-            <div class="footer-bottom">
-                <ul class="footer-bottom-list">
-                    <li class="footer-item-main footer-bottom-list-item">Our Products</li>
-                    <li class="footer-bottom-list-item">The Support Suite</li>
-                    <li class="footer-bottom-list-item">The Sales Suite</li>
-                    <li class="footer-bottom-list-item">Support</li>
-                    <li class="footer-bottom-list-item">Guide</li>
-                </ul>
-                <ul class="footer-bottom-list">
-                    <li class="footer-item-main footer-bottom-list-item">Top Features</li>
-                    <li class="footer-bottom-list-item">Ticketing System</li>
-                    <li class="footer-bottom-list-item">Knowledge Base</li>
-                    <li class="footer-bottom-list-item">Community Forums</li>
-                    <li class="footer-bottom-list-item">Help Desk Software</li>
-                </ul>
-                <ul class="footer-bottom-list">
-                    <li class="footer-item-main footer-bottom-list-item">Resources</li>
-                    <li class="footer-bottom-list-item">Product Support</li>
-                    <li class="footer-bottom-list-item">Request Demo</li>
-                    <li class="footer-bottom-list-item">Library</li>
-                    <li class="footer-bottom-list-item">Business Blog</li>
-                </ul>
-                <ul class="footer-bottom-list">
-                    <li class="footer-item-main footer-bottom-list-item">Company</li>
-                    <li class="footer-bottom-list-item">About Us</li>
-                    <li class="footer-bottom-list-item">Press</li>
-                    <li class="footer-bottom-list-item">Investors</li>
-                    <li class="footer-bottom-list-item">Events</li>
-                </ul>
-                <ul class="footer-bottom-list">
-                    <li class="footer-item-main footer-bottom-list-item">Favourite Things</li>
-                    <li class="footer-bottom-list-item">For Enterprise</li>
-                    <li class="footer-bottom-list-item">For Startups</li>
-                    <li class="footer-bottom-list-item">For Benchmark</li>
-                    <li class="footer-bottom-list-item">For Small Business</li>
-                </ul>
+            <img src="./images/p12i3.jpg" alt="" class="hero-img">
+        </div>
+        <div class="heros">
+            <img src="./images/p12i4.jpg" alt="" class="hero-img boy-img">
+            <div class="hero-body">
+                <h1>We give proven digital marketing strategies forour clients</h1>
+                <p>Consultants working hard and we collaborate with organizations that are keen transform the legal industry reach their goals and pursue their dreams.</p>
+                <button class="talk-btn">Let's Talk</button>
             </div>
+        </div>
+        <div class="heros">
+            <div class="hero-body">
+                <h1>People will always judge the book by it's cover</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dignissimos repellendus? Temporibus iste assumenda itaque nostrum est exercitationem optio repudiandae architecto, necessitatibus ipsum, dolores dolorum?</p>
+                <button class="talk-btn">Let's Talk</button>
+            </div>
+            <img src="./images/p12i5.jpg" alt="" class="hero-img">
         </div>
     </div>
+    <div class="team">
+        <div class="team-head">
+            <h1>Meet our great creative teams</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et obcaecati doloremque velit. Alias deleniti obcaecati sed id accusantium, quisquam esse pariatur, velit, cumque aspernatur quis?</p>
+        </div>
+        <div class="team-cards">
+            <div class="team-member">
+                <img src="./images/p12i6.jpg" alt="Avatar">
+                <h4 class="name">Amera Amanda</h4>
+                <p class="bio">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quos nihil voluptate.
+                </p>
+            </div>
+            <div class="team-member">
+                <img src="./images/p12i7.jpg" alt="Avatar">
+                <h4 class="name">Lucas Podolski</h4>
+                <p class="bio">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quos nihil voluptate.
+                </p>
+            </div>
+            <div class="team-member">
+                <img src="./images/p12i8.jpg" alt="Avatar">
+                <h4 class="name">Leny Marissa Nasution</h4>
+                <p class="bio">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat quos nihil voluptate.
+                </p>
+            </div>
+        </div>
+        <div class="last-btn">
+            <button class="talk-btn">See More</button>
+        </div>
+    </div>
+    <footer>
+        <div class="footheader">
+            <img src="./images/white-logo.png" class="bottom-logo" alt="Logo">
+            <img src="./images/Business Landing Page.svg" class="socials" alt="">
+        </div>
+        <div class="footlist">
+            <div class="list">
+                <h6 class="foothead">Our Products</h6>
+                <li class="secondary">The support suite</li>
+                <li class="secondary">The Sales suite</li>
+                <li class="secondary">Support</li>
+                <li class="secondary">Guide</li>
+            </div>
+            <div class="list">
+                <h6 class="foothead">Top Features</h6>
+                <li class="secondary">Ticketing System</li>
+                <li class="secondary">Knowledge Base</li>
+                <li class="secondary">Community Forums</li>
+                <li class="secondary">Help Desk Software</li>
+            </div>
+            <div class="list">
+                <h6 class="foothead">Resources</h6>
+                <li class="secondary">About US</li>
+                <li class="secondary">Press</li>
+                <li class="secondary">Investors</li>
+                <li class="secondary">Events</li>
+            </div>
+            <div class="list">
+                <h6 class="foothead">Favourite Things</h6>
+                <li class="secondary">For Enterprise</li>
+                <li class="secondary">For Startups</li>
+                <li class="secondary">For Benchmark</li>
+                <li class="secondary">For Small Business</li>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
